Status codes, DeskOwner
1. Поменял названия:
    Desk Creator -> Desk Owner
    register -> signin
2. Статусы у некоторых ответов
3. Начал заполнять описание swagger
